# FrontToBack

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/src/: App.tsx
go-backend/: go.mod  main.go  tric.md
go-backend/controllers/: todoController.go
go-backend/initializers/: database.go  loadEnv.go
go-backend/models/: todoModel.go
