[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"              # Web Framework
tokio = { version = "1", features = ["full"] } # Async Runtime
serde = { version = "1.0", features = ["derive"] } # JSON Serializer
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] } # Database Driver
tower-http = { version = "0.5", features = ["cors"] } # จัดการ CORS (ให้ React ยิงมาได้)
dotenvy = "0.15"          # อ่านไฟล์ .env